--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Code Source/EmargementRFID/nbproject/private/
 /Code Source/EmargementRFID/build/
 /Code Source/PartieServeur/nbproject/private/
+/Code Source/nbproject/private/
